--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "pharmacy_dashboard",
-    "short_name": "pharmacy_dashboard",
+    "name": "trippo_dashboard",
+    "short_name": "trippo_dashboard",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
